proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/oop_trivial_bad.py
# Test a syntactically wrong class definition.
class FooWrong
    def __init__(self):
        pass
